			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------


==================================
VERSION 5.5.37 (November 12, 2005)
==================================

  * FIXED: Memory leak in arithmetic combining GMP numbers with floats.
    Dmitry.

  * FIXED: plld: schedule .a files with the libraries.  Roberto Bagnara.

  * FIXED: Bug#116: shell/0 on Windows.  Dmitry.

  * FIXED: QLF and saved-state handling of big clauses (>65000 VM
    codes).  Matt Lilley.

  * ADDED: functions lsb/1 and popcount/1 to improve support for handling
    GMP numbers as bitvectors.  Enhanced clp_distinct.pl to use these
    functions.  Suggested by Markus Triska.

  * ADDED: library(clp/clp_distinct.pl).  Contributed by  Markus Triska.

  * COMPAT: prolog_load_context/2 to support the SICStus key `source'.
    Bart Demoen.

  * PORT: Bug#109: Added --disable-custom-flags for configure.  
    Mike Frysinger.

  * ENHANCED: locale based detection of natively (UTF-8 or ISO Latin-1)
    supported encodings.  Richard O'Keefe.

  * ADDED: library(clp/clp_tuples.pl), Symbolic constraints on tuples.
    Later moved these predicates to clp/bounds.pl. Contributed by
    Markus Triska.

  * PORT: Bug#110: Solaris float handling.  Andreas Vögele.

  * FIXED: IO_RECORDPOS handling.  Bug exposed by changes for UTF-16 I/O
    on Windows.  Dmitry and Holger Kanwischer.

=================================
VERSION 5.5.36 (October 24, 2005)
=================================

  * FIXED: UTF-16 I/O on Windows systems.  Dmitry.

  * FIXED: integer arithmetic returning results between -1<<63 and -1<<31.
    Leslie de Koninck.

=================================
VERSION 5.5.35 (October 19, 2005)
=================================

  * ENHANCED: delete choicepoint of catch/3, maintaining last call